change sign up flow.

--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -9,7 +9,7 @@
 	<dl>
 		<dt><a href="/login">login</a></dt>
 		<dt>you are <%= user[:name] %></dt>
-		<dt><a href="/user/new">new user</a></dt>
+		<dt><a href="/user/new">sign up</a></dt>
 	</dl>
 	<dl>
 	<% records.each do |r| %>
