--- a/views/new_user.erb
+++ b/views/new_user.erb
@@ -8,10 +8,9 @@
 	<h1>New user</h1>
 	<form method="post" action="/user/new">
 		<dl>
-			<dt>id <input type="text" name="id"></dt>
 			<dt>profile <input type="text" name="profile"></dt>
 			<dt>name <input type="text" name="name"></dt>
-			<dt>password <input type="text" name="password"></dt>
+			<dt>password <input type="password" name="password"></dt>
 			<dt><input type="submit" value="create"></dt>
 		</dl>
 	</form>
