--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="/rss">
 	<title>Bookmarks | kodama</title>
 </head>
 <body>
