--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -15,12 +15,12 @@
 	<div class="autopagerize_page_element">
 	<% records.each do |r| %>
 		<div class="xforkentry">
-			<div><a class="taggedlink" href="<%= r[:url] %>"><%= r[:title] %></a></div>
-			<div class="description">url: <%= r[:url] %></div>
-			<div class="meta">tag: <%= r[:tag] %></div>
-			<div class="description">note: <%= r[:note] %></div>
-			<div class="description">user: <%= r[:name] %></div>
-			<div><a href="/edit/<%= r[:id] %>">edit</a> | <a href="/<%= r[:id] %>/delete">delete</a></div>
+			<div><a class="taggedlink" href="<%= r[:bookmarks][:url] %>"><%= r[:bookmarks][:title] %></a></div>
+			<div class="description">url: <%= r[:bookmarks][:url] %></div>
+			<div class="meta">tag: <%= r[:bookmarks][:tag] %></div>
+			<div class="description">note: <%= r[:bookmarks][:note] %></div>
+			<div class="description">user: <%= r[:users][:name] %></div>
+			<div><a href="/edit/<%= r[:bookmarks][:id] %>">edit</a> | <a href="/<%= r[:bookmarks][:id] %>/delete">delete</a></div>
 		</div>
 	<% end %>
 	</div>
