add login username to new bookmark page.

--- a/views/new_bookmark.erb
+++ b/views/new_bookmark.erb
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<h1>New Bookmark</h1>
+	<p>You're '<%= user[:name] %>'. <a href="/login">login?</a></p>
 	<form method="post" action="/new">
 		<dl>
 		<dt>title <input type="text" name="title" value="<%= hints[:title] %>"></dt>
